# ha-status-bar

./: ARCHITECTURE.md  README.md  package-lock.json  package.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  ha_client.rs  lib.rs  main.rs
